<resources>
    <string name="app_name">roancomed</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="nombres">Nombres</string>
    <string name="registro_de_usuario">Registro de usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="e_mail">E-mail</string>
    <string name="nombre">Nombre</string>
    <string name="email">Email</string>
    <string name="registrar">Registrar</string>
    <string name="inicio_de_sesi_n">Inicio de sesión</string>
    <string name="iniciar_sesi_n2">iniciar sesión</string>
    <string name="registrar2">Registrar</string>
</resources>