<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/contenedor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="254dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="309dp"
                android:layout_height="202dp"
                android:layout_marginBottom="40dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/developeru" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/registro_de_usuario"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="215dp"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="61dp">

                <TextView
                    android:id="@+id/names"
                    android:layout_width="80dp"
                    android:padding="3dip"
                    android:text="@string/nombre" />

                <EditText
                    android:id="@+id/txtnames"
                    android:layout_width="309dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:gravity="start"
                    android:hint="@string/nombres"
                    android:inputType="textPersonName" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="59dp">

                <TextView
                    android:id="@+id/email"
                    android:layout_width="78dp"
                    android:padding="3dip"
                    android:text="@string/e_mail" />

                <EditText
                    android:id="@+id/txtemail"
                    android:layout_width="309dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:gravity="start"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="72dp">

                <TextView
                    android:id="@+id/contra"
                    android:layout_width="78dp"
                    android:padding="3dip"
                    android:text="@string/contrase_a" />

                <EditText
                    android:id="@+id/txtcontra"
                    android:layout_width="309dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:gravity="start"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </TableRow>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="15dp"
                android:background="#1976d2"
                android:text="@string/registrar"
                android:textColor="#FFF"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnIrInicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="15dp"
                android:background="#1976d2"
                android:text="@string/iniciar_sesi_n2"
                android:textColor="#FFF"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>